# financas-familiares

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.agents/rules/: ignore.md
docs/: plano_implementacao.md  requisitos_funcionais.md  requisitos_nao_funcionais.md
migrations/: 0001.initial_schema.sql  0002.update_entities_20260506.sql  0003.backfill_card_instances_family_id.sql
src/: config.py
src/application/dtos/: family_dtos.py  financial_dtos.py
src/application/services/: category_service.py  family_service.py  financial_service.py
src/domain/financial/: entities.py  repositories.py
src/domain/identity/: entities.py  repositories.py
src/infrastructure/database/: bootstrap.py  setup.py
src/infrastructure/repositories/: in_memory.py  sqlite_repository.py
src/interface/web/: app.py
src/interface/web/routes/: bank_account.py  category.py  credit_card.py  family.py  home.py  member.py
src/interface/web/templates/: base.html  home.html
src/interface/web/templates/bank_account/: form.html  index.html
src/interface/web/templates/category/: form.html  index.html
src/resources/: default_categories.json
tests/application/: test_family_service.py  test_financial_service.py
tests/domain/: test_account.py  test_bank_account.py  test_card_instance.py  test_category.py  test_credit_card.py  test_credit_card_bill.py  test_entities.py  test_family.py  test_financial.py  test_identity.py  test_member.py  test_monthly_balance.py  test_practice.py  test_tab.py  test_transaction.py  test_transfer.py  test_wallet.py
(+7 files in other folders)
