[project]
name = "financas-familiares"
version = "0.1.0"
description = "Aplicação para controle financeiro familiar"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "tests"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
