[project]
name = "financas-familiares"
version = "0.1.0"
description = "Aplicação para controle financeiro familiar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
